--- a/app/src/main/res/layout/activity_shelter_inpo.xml
+++ b/app/src/main/res/layout/activity_shelter_inpo.xml
@@ -42,11 +42,12 @@
                 <ImageView
                     android:id="@+id/shtImg"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:alpha="50"
                     android:scaleType="fitXY"
                     android:src="@drawable/testpic"
+                    android:adjustViewBounds="true"
                     />
             </LinearLayout>
 <LinearLayout
